--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.jpa.show-sql=true
 
 spring.jpa.open-in-view=true
 
+spring.main.lazy-initialization=true
+
 spring.flyway.url=jdbc:mysql://localhost:3306
 spring.flyway.user=root
 spring.flyway.password=ghblevfyysq gfhjkm}
